Добавлен редактор уровней

--- a/main.css
+++ b/main.css
@@ -1,5 +1,22 @@
-#gameCanvas {
+body, html {
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
-    border: 1px solid black;
+    overflow: hidden;
+    font-family: 'Arial', sans-serif;
+}
+
+#gameCanvas, #editorCanvas {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
