--- a/map.css
+++ b/map.css
@@ -16,6 +16,19 @@ body, html {
     width: 100%;
     height: 100%;
     object-fit: fill;
+    opacity: 0;
+    animation: fadeIn 0.75s ease forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.95);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .levelBtn {
